// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Autocomplete Airport 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": 244,
      }
    }
  >
    <div
      className="sc-kjoXOD lUKdb"
    >
      <div
        className="react-autosuggest__container"
      >
        <div
          className="sc-gipzik dNzsRJ"
        >
          <textarea
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-expanded={false}
            aria-haspopup={false}
            aria-owns="react-autowhatever-1"
            autoCapitalize="sentences"
            autoComplete="off"
            autoFocus={true}
            className="react-autosuggest__input sc-csuQGl XHQvw"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="Туда"
            role="combobox"
            rows="1"
            type="text"
            value=""
            wrap="off"
          />
          <div
            className="airport-input__geo sc-Rmtcm fZdPuk"
          >
            <div
              className="sc-hzDkRC cFCdAE"
            >
              
            </div>
            
            
          </div>
          <div
            className="sc-fBuWsC gHcHIc"
          >
            
          </div>
        </div>
        <div
          className="react-autosuggest__suggestions-container"
          id="react-autowhatever-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Blocks FilterSection 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": 252,
      }
    }
  >
    <section
      className="sc-ifAKCX mmAti"
    >
      <header
        className="sc-EHOje iwBHie"
      >
        <div>
          Пересадки
        </div>
        <div>
          Сбросить
        </div>
      </header>
      <div
        className="sc-bZQynM bdCSpS"
      >
        <div>
          <div>
            <label
              className="sc-kAzzGY fDOeck"
              disabled={false}
            >
              <span
                checked={false}
                className="checkbox sc-jzJRlG dREzXp"
                disabled={false}
              >
                <input
                  checked={false}
                  className="sc-jTzLTM izYhGY"
                  disabled={false}
                  name=""
                  onChange={[Function]}
                  type="checkbox"
                />
              </span>
              <span
                className="label-text sc-cSHVUG jkPykj"
                disabled={false}
              >
                Без пересадок
              </span>
            </label>
          </div>
          <div>
            <label
              className="sc-kAzzGY fDOeck"
              disabled={false}
            >
              <span
                checked={false}
                className="checkbox sc-jzJRlG dREzXp"
                disabled={false}
              >
                <input
                  checked={false}
                  className="sc-jTzLTM izYhGY"
                  disabled={false}
                  name=""
                  onChange={[Function]}
                  type="checkbox"
                />
              </span>
              <span
                className="label-text sc-cSHVUG jkPykj"
                disabled={false}
              >
                1 пересадка
              </span>
            </label>
          </div>
          <div>
            <label
              className="sc-kAzzGY fDOeck"
              disabled={false}
            >
              <span
                checked={false}
                className="checkbox sc-jzJRlG dREzXp"
                disabled={false}
              >
                <input
                  checked={false}
                  className="sc-jTzLTM izYhGY"
                  disabled={false}
                  name=""
                  onChange={[Function]}
                  type="checkbox"
                />
              </span>
              <span
                className="label-text sc-cSHVUG jkPykj"
                disabled={false}
              >
                2 и более
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        className="rc-collapse"
        style={undefined}
      >
        <div
          className="rc-collapse-item sc-iwsKbI hIrClY sc-htpNat jpYvPn"
          id={undefined}
          style={undefined}
        >
          <div
            aria-expanded={false}
            className="rc-collapse-header"
            onClick={[Function]}
            role="tab"
          >
            <div
              className="sc-htoDjs fYyxaZ"
            >
              <div
                className="sc-jbKcbu epyocb"
              >
                Пересадки
              </div>
              <svg
                className="sc-dnqmqq htZMOn icon-inherit-color sc-bxivhb ljgSYE"
                size="xxsmall"
                style={undefined}
              >
                <use
                  xlinkHref="#kb_arrow-down"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Blocks Styled Tabs 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    className="rc-tabs rc-tabs-top"
    style={Object {}}
  >
    <div
      className={undefined}
    >
      <span
        aria-disabled={undefined}
        className="sc-kvZOFW bkZmTX"
        onFocus={[Function]}
        role="tab"
        tabIndex="0"
      >
        1. Бронирование
      </span>
      <span
        aria-disabled={undefined}
        className="sc-kvZOFW fJyFPC"
        onFocus={[Function]}
        role="tab"
        tabIndex="0"
      >
        2. Оплата
      </span>
      <span
        aria-disabled={undefined}
        className="sc-kvZOFW bkZmTX"
        onFocus={[Function]}
        role="tab"
        tabIndex="0"
      >
        3. Получение билета
      </span>
    </div>
    <div
      className="rc-tabs-content rc-tabs-content-no-animated"
      style={undefined}
    >
      <div
        aria-hidden="true"
        className="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
        style={undefined}
      />
      <div
        aria-hidden="false"
        className="rc-tabs-tabpane rc-tabs-tabpane-active"
        role="tabpanel"
        style={undefined}
      >
        Second tab
      </div>
      <div
        aria-hidden="true"
        className="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
        style={undefined}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Box Defalut 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    className="sc-bwzfXH gSYwXg"
  >
    <p>
      box content
    </p>
  </div>
</div>
`;

exports[`Storyshots Buttons Default 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <button
    className="no-global sc-gZMcBi gBfaHm"
    disabled={undefined}
    size="normal"
  >
    <span
      className="sc-gqjmRU hdtzDm"
      size="normal"
    >
      Авиабилеты
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons Disabled 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <button
    className="no-global sc-gZMcBi keJrks"
    disabled={true}
    size="normal"
  >
    <span
      className="sc-gqjmRU hdtzDm"
      size="normal"
    >
      Cake is a lie
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons Icon-only button 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <button
    className="no-global sc-gZMcBi bqDqgc"
    disabled={undefined}
    size="large"
  >
    <span
      className="sc-VigVT botnlB"
      size="large"
    >
      <svg
        className="sc-bxivhb deayMY"
        size="normal"
        style={undefined}
      >
        <use
          xlinkHref="#kb_carrot_monochrome"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons Sizes 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <button
    className="no-global sc-gZMcBi eYyVYF"
    disabled={undefined}
    size="large"
  >
    <span
      className="sc-gqjmRU hdtzDm"
      size="large"
    >
      Бальшой
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons With icons 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <button
    className="no-global sc-gZMcBi klZNue"
    disabled={undefined}
    size="normal"
  >
    <span
      className="sc-VigVT cerRmq"
      size="normal"
    >
      <svg
        className="sc-bxivhb kLyRqs"
        size="normal"
        style={undefined}
      >
        <use
          xlinkHref="#kb_plane"
        />
      </svg>
    </span>
    <span
      className="sc-gqjmRU kSqCP"
      size="normal"
    >
      Авиабилеты
    </span>
    <span
      className="sc-VigVT cerRmq"
      size="normal"
    >
      <svg
        className="sc-bxivhb deayMY"
        size="normal"
        style={undefined}
      >
        <use
          xlinkHref="#kb_hand-baggage"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Checkbox default 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div>
    <label
      className="sc-kAzzGY fDOeck"
      disabled={false}
    >
      <span
        checked={false}
        className="checkbox sc-jzJRlG dREzXp"
        disabled={false}
      >
        <input
          checked={false}
          className="sc-jTzLTM izYhGY"
          disabled={false}
          name=""
          onChange={[Function]}
          type="checkbox"
        />
      </span>
      <span
        className="label-text sc-cSHVUG jkPykj"
        disabled={false}
      >
        Авиабилеты
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Checkbox disabled 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <label
    className="sc-kAzzGY fLUfjB"
    disabled={true}
  >
    <span
      checked={false}
      className="checkbox sc-jzJRlG dvWCAm"
      disabled={true}
    >
      <input
        checked={false}
        className="sc-jTzLTM izYhGY"
        disabled={true}
        name=""
        onChange={[Function]}
        type="checkbox"
      />
    </span>
    <span
      className="label-text sc-cSHVUG hHvAiZ"
      disabled={true}
    >
      Авиабилеты
    </span>
  </label>
</div>
`;

exports[`Storyshots Collapse Accordion 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": "252px",
      }
    }
  >
    <div
      className="rc-collapse"
      style={undefined}
    >
      <div
        className="rc-collapse-item sc-htpNat jpYvPn"
        id={undefined}
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Foo
        </div>
      </div>
      <div
        className="rc-collapse-item sc-htpNat jpYvPn"
        id={undefined}
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Bar
        </div>
      </div>
      <div
        className="rc-collapse-item sc-htpNat jpYvPn"
        id={undefined}
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Mdaaaaa
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collapse Default 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": "252px",
      }
    }
  >
    <div
      className="rc-collapse"
      style={undefined}
    >
      <div
        className="rc-collapse-item sc-htpNat jpYvPn"
        id={undefined}
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Foo
        </div>
      </div>
      <div
        className="rc-collapse-item sc-htpNat jpYvPn"
        id={undefined}
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Bar
        </div>
      </div>
      <div
        className="rc-collapse-item sc-htpNat jpYvPn"
        id={undefined}
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Mdaaaaa
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collapse Default active panel 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": "252px",
      }
    }
  >
    <div
      className="rc-collapse"
      style={undefined}
    >
      <div
        className="rc-collapse-item rc-collapse-item-active sc-htpNat jpYvPn"
        id={undefined}
        style={undefined}
      >
        <div
          aria-expanded={true}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Foo
        </div>
        <div
          className="rc-collapse-content rc-collapse-content-active"
          role="tabpanel"
        >
          <div
            className="rc-collapse-content-box"
          >
            
              A dog is a type of domesticated animal.
              Known for its loyalty and faithfulness,
              it can be found as a welcome guest in many households across the world.
            
          </div>
        </div>
      </div>
      <div
        className="rc-collapse-item sc-htpNat jpYvPn"
        id={undefined}
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Bar
        </div>
      </div>
      <div
        className="rc-collapse-item sc-htpNat jpYvPn"
        id={undefined}
        style={undefined}
      >
        <div
          aria-expanded={false}
          className="rc-collapse-header"
          onClick={[Function]}
          role="tab"
        >
          Mdaaaaa
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ControlsGroup Different controls group 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    className="sc-hMqMXs kiEKjH"
  >
    <button
      className="no-global sc-gZMcBi egQBpH"
      disabled={undefined}
      size="large"
    >
      <span
        className="sc-gqjmRU hdtzDm"
        size="large"
      >
        Пойти
      </span>
    </button>
    <div
      className="sc-gipzik bXTdGA"
    >
      <textarea
        autoCapitalize="sentences"
        autoComplete="off"
        className="sc-csuQGl dOjQVy"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        rows="1"
        value="Шереметьево"
        wrap="off"
      />
      <div
        className="airport-input__geo sc-Rmtcm gEVxKR"
      >
        <div
          className="sc-hzDkRC cFCdAE"
        >
          Шереметьево
        </div>
        
        
      </div>
      <div
        className="sc-fBuWsC iAVNCH"
      >
        SVO
      </div>
    </div>
    <button
      className="no-global sc-gZMcBi cNYsWJ"
      disabled={undefined}
      size="large"
    >
      <span
        className="sc-gqjmRU hdtzDm"
        size="large"
      >
        Найти
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots ControlsGroup Inputs group 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    className="sc-hMqMXs kiEKjH"
  >
    <div
      className="sc-gipzik fbbbnv"
    >
      <textarea
        autoCapitalize="sentences"
        autoComplete="off"
        className="sc-csuQGl fVBLcb"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        rows="1"
        value="Шереметьево"
        wrap="off"
      />
      <div
        className="airport-input__geo sc-Rmtcm fZdPuk"
      >
        <div
          className="sc-hzDkRC cFCdAE"
        >
          Шереметьево
        </div>
        
        
      </div>
      <div
        className="sc-fBuWsC iAVNCH"
      >
        SVO
      </div>
    </div>
    <div
      className="sc-kEYyzF juTNNb"
      onClick={[Function]}
    >
      <svg
        className="controls-group__swap sc-kkGfuU fpmnQg icon-inherit-color sc-bxivhb ljgSYE"
        size="xxsmall"
        style={undefined}
      >
        <use
          xlinkHref="#kb_left-right"
        />
      </svg>
    </div>
    <div
      className="sc-gipzik fYwGTS"
    >
      <textarea
        autoCapitalize="sentences"
        autoComplete="off"
        className="sc-csuQGl dtrAAI"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        rows="1"
        value="Несуществующий город"
        wrap="off"
      />
      <div
        className="airport-input__geo sc-Rmtcm gEVxKR"
      >
        <div
          className="sc-hzDkRC cFCdAE"
        >
          Несуществующий город
        </div>
        
        
      </div>
      <div
        className="sc-fBuWsC gHcHIc"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DateRange DateRange 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    className="sc-cMljjf jIRDym"
  >
    <div
      className="DateInput--startDate--placeholder DateInput--endDate--placeholder"
    >
      <div
        className="DateRangePicker"
      >
        <div>
          <div
            className="DateRangePickerInput"
          >
            <div
              className="DateInput"
            >
              <input
                aria-describedby=""
                aria-label="Туда"
                autoComplete="off"
                className="DateInput__input"
                disabled={false}
                id="startDate"
                name="startDate"
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Туда"
                readOnly={false}
                required={false}
                type="text"
                value=""
              />
              
              <div
                className="DateInput__display-text"
              >
                Туда
              </div>
            </div>
            <div
              className="DateRangePickerInput__arrow"
            >
              <span />
            </div>
            <div
              className="DateInput"
            >
              <input
                aria-describedby=""
                aria-label="Обратно"
                autoComplete="off"
                className="DateInput__input"
                disabled={false}
                id="endDate"
                name="endDate"
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Обратно"
                readOnly={false}
                required={false}
                type="text"
                value=""
              />
              
              <div
                className="DateInput__display-text"
              >
                Обратно
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Dropdown Defalut 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <onClickOutside-Mock-Decorator>
    <div
      className="sc-jWBwVP kxFoQB"
    >
      <div
        onClick={[Function]}
      >
        click to open  
        <button
          className="no-global sc-gZMcBi gBfaHm"
          disabled={undefined}
          size="normal"
        >
          <span
            className="sc-gqjmRU hdtzDm"
            size="normal"
          >
            click
          </span>
        </button>
      </div>
    </div>
  </onClickOutside-Mock-Decorator>
</div>
`;

exports[`Storyshots Fluid layout Aside on top with beforeSection prop 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": "100vw",
      }
    }
  >
    <div
      className="sc-iAyFgw jvxXAV"
    >
      <div
        className="sc-hSdWYo EiRZm"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(35, 194, 86, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Main content
        </div>
      </div>
      <div
        className="sc-eHgmQL gBomhi"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(230, 73, 38, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Sidebar
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Fluid layout Single column 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": "100vw",
      }
    }
  >
    <div
      className="sc-cvbbAY cAqpXD"
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "background": "rgba(35, 194, 86, .4)",
            "display": "flex",
            "height": 140,
            "justifyContent": "center",
          }
        }
      >
        Main content
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Fluid layout Two columns 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": "100vw",
      }
    }
  >
    <div
      className="sc-iAyFgw jvxXAV"
    >
      <div
        className="sc-hSdWYo EiRZm"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(35, 194, 86, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Main content
        </div>
      </div>
      <div
        className="sc-eHgmQL bvCXpb"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(230, 73, 38, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Sidebar
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Icon Medium Icon with stroke & fill 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <svg
    className="sc-bxivhb fIrOio"
    size="medium"
    style={undefined}
  >
    <use
      xlinkHref="#kb_airport-change"
    />
  </svg>
</div>
`;

exports[`Storyshots Icon Small Icon with stroke 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <svg
    className="sc-bxivhb kdfCdt"
    size="small"
    style={undefined}
  >
    <use
      xlinkHref="#kb_checkbox"
    />
  </svg>
</div>
`;

exports[`Storyshots PassengerPicker Defalut 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    className="sc-cHGsZl ipxiiD"
  >
    <div>
      <div
        className="sc-TOsTZ gNxWLU"
      >
        Взрослые
      </div>
      <div
        className="sc-kgAjT kuboaN"
      >
        До 2 лет, без места
      </div>
    </div>
    <div
      className="sc-hmzhuo jTPNxq"
    >
      <span
        className="sc-cJSrbW bVkicF"
      >
        1
      </span>
      <div
        className="sc-frDJqD iDQvIn"
      >
        <button
          className="no-global sc-ksYbfQ hUUMUs sc-gZMcBi dkdJqv"
          disabled={true}
          onClick={[Function]}
          size="normal"
        >
          <span
            className="sc-VigVT cerRmq"
            size="normal"
          >
            <svg
              className="sc-bxivhb hLuXwK"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_minus"
              />
            </svg>
          </span>
        </button>
        <button
          className="no-global sc-ksYbfQ hUUMUs sc-gZMcBi ezVieq"
          disabled={false}
          onClick={[Function]}
          size="normal"
        >
          <span
            className="sc-VigVT cerRmq"
            size="normal"
          >
            <svg
              className="sc-bxivhb hLuXwK"
              size="normal"
              style={undefined}
            >
              <use
                xlinkHref="#kb_plus"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Slider Slider 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "width": "252px",
      }
    }
  >
    <div
      className="rheostat rheostat-horizontal sc-chPdSV ijufRu"
      onClick={[Function]}
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <div
        className="rheostat-background"
      />
      <div>
        <div
          className="sc-dxgOiQ inwCPG"
          onMouseDown={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "left": "0%",
              "position": "absolute",
              "zIndex": 2,
            }
          }
        >
          <span
            className="sc-eNQAEJ dUIGOF"
            color="black"
            onClick={undefined}
          >
            <span
              className="sc-jKJlTe kxCGof"
            >
              0
            </span>
          </span>
          <span>
            <span
              aria-disabled={false}
              aria-valuemax={149}
              aria-valuemin={0}
              aria-valuenow={0}
              className="rheostat-handle sc-kgoBCf hNahHA"
              data-handle-key={0}
              onClick={undefined}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
              role="slider"
              style={
                Object {
                  "left": "0%",
                  "position": "absolute",
                }
              }
              tabIndex={0}
            />
          </span>
        </div>
      </div>
      <div>
        <div
          className="sc-dxgOiQ inwCPG"
          onMouseDown={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "left": "100%",
              "position": "absolute",
              "zIndex": 2,
            }
          }
        >
          <span
            className="sc-eNQAEJ dUIGOF"
            color="black"
            onClick={undefined}
          >
            <span
              className="sc-jKJlTe kxCGof"
            >
              298
            </span>
          </span>
          <span>
            <span
              aria-disabled={false}
              aria-valuemax={149}
              aria-valuemin={0}
              aria-valuenow={149}
              className="rheostat-handle sc-kgoBCf hNahHA"
              data-handle-key={1}
              onClick={undefined}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
              role="slider"
              style={
                Object {
                  "left": "100%",
                  "position": "absolute",
                }
              }
              tabIndex={0}
            />
          </span>
        </div>
      </div>
      <span
        className="rheostat-progress sc-kGXeez jfddOm"
        style={
          Object {
            "left": "0%",
            "width": "100%",
          }
        }
      />
      <span
        className="sc-kpOJdX WjFPJ"
        style={
          Object {
            "left": "0%",
            "position": "absolute",
          }
        }
      >
        0
      </span>
      <span
        className="sc-kpOJdX dNvJeO"
        style={
          Object {
            "left": "0.6711409395973155%",
            "position": "absolute",
          }
        }
      >
        1
      </span>
      <span
        className="sc-kpOJdX dMslrd"
        style={
          Object {
            "left": "1.342281879194631%",
            "position": "absolute",
          }
        }
      >
        2
      </span>
      <span
        className="sc-kpOJdX fcbFIW"
        style={
          Object {
            "left": "2.013422818791946%",
            "position": "absolute",
          }
        }
      >
        3
      </span>
      <span
        className="sc-kpOJdX iAAhdL"
        style={
          Object {
            "left": "2.684563758389262%",
            "position": "absolute",
          }
        }
      >
        4
      </span>
      <span
        className="sc-kpOJdX jJPKiI"
        style={
          Object {
            "left": "3.3557046979865772%",
            "position": "absolute",
          }
        }
      >
        5
      </span>
      <span
        className="sc-kpOJdX dKubCR"
        style={
          Object {
            "left": "4.026845637583892%",
            "position": "absolute",
          }
        }
      >
        6
      </span>
      <span
        className="sc-kpOJdX dKubCR"
        style={
          Object {
            "left": "4.697986577181208%",
            "position": "absolute",
          }
        }
      >
        7
      </span>
      <span
        className="sc-kpOJdX jCdJlt"
        style={
          Object {
            "left": "5.369127516778524%",
            "position": "absolute",
          }
        }
      >
        8
      </span>
      <span
        className="sc-kpOJdX iAAhdL"
        style={
          Object {
            "left": "6.0402684563758395%",
            "position": "absolute",
          }
        }
      >
        9
      </span>
      <span
        className="sc-kpOJdX bhoRTc"
        style={
          Object {
            "left": "6.7114093959731544%",
            "position": "absolute",
          }
        }
      >
        10
      </span>
      <span
        className="sc-kpOJdX dMslrd"
        style={
          Object {
            "left": "7.38255033557047%",
            "position": "absolute",
          }
        }
      >
        11
      </span>
      <span
        className="sc-kpOJdX jJPKiI"
        style={
          Object {
            "left": "8.053691275167784%",
            "position": "absolute",
          }
        }
      >
        12
      </span>
      <span
        className="sc-kpOJdX dNvJeO"
        style={
          Object {
            "left": "8.724832214765101%",
            "position": "absolute",
          }
        }
      >
        13
      </span>
      <span
        className="sc-kpOJdX dNvJeO"
        style={
          Object {
            "left": "9.395973154362416%",
            "position": "absolute",
          }
        }
      >
        14
      </span>
      <span
        className="sc-kpOJdX bhoRTc"
        style={
          Object {
            "left": "10.06711409395973%",
            "position": "absolute",
          }
        }
      >
        15
      </span>
      <span
        className="sc-kpOJdX dKubCR"
        style={
          Object {
            "left": "10.738255033557047%",
            "position": "absolute",
          }
        }
      >
        16
      </span>
      <span
        className="sc-kpOJdX WjFPJ"
        style={
          Object {
            "left": "11.409395973154362%",
            "position": "absolute",
          }
        }
      >
        17
      </span>
      <span
        className="sc-kpOJdX fcbFIW"
        style={
          Object {
            "left": "12.080536912751679%",
            "position": "absolute",
          }
        }
      >
        18
      </span>
      <span
        className="sc-kpOJdX jJPKiI"
        style={
          Object {
            "left": "12.751677852348994%",
            "position": "absolute",
          }
        }
      >
        19
      </span>
      <span
        className="sc-kpOJdX dNvJeO"
        style={
          Object {
            "left": "13.422818791946309%",
            "position": "absolute",
          }
        }
      >
        20
      </span>
      <span
        className="sc-kpOJdX jJPKiI"
        style={
          Object {
            "left": "14.093959731543624%",
            "position": "absolute",
          }
        }
      >
        21
      </span>
      <span
        className="sc-kpOJdX jJPKiI"
        style={
          Object {
            "left": "14.76510067114094%",
            "position": "absolute",
          }
        }
      >
        22
      </span>
      <span
        className="sc-kpOJdX jCdJlt"
        style={
          Object {
            "left": "15.436241610738255%",
            "position": "absolute",
          }
        }
      >
        23
      </span>
      <span
        className="sc-kpOJdX iAAhdL"
        style={
          Object {
            "left": "16.10738255033557%",
            "position": "absolute",
          }
        }
      >
        24
      </span>
      <span
        className="sc-kpOJdX iAAhdL"
        style={
          Object {
            "left": "16.778523489932887%",
            "position": "absolute",
          }
        }
      >
        25
      </span>
      <span
        className="sc-kpOJdX jCdJlt"
        style={
          Object {
            "left": "17.449664429530202%",
            "position": "absolute",
          }
        }
      >
        26
      </span>
      <span
        className="sc-kpOJdX fcbFIW"
        style={
          Object {
            "left": "18.120805369127517%",
            "position": "absolute",
          }
        }
      >
        27
      </span>
      <span
        className="sc-kpOJdX dMslrd"
        style={
          Object {
            "left": "18.79194630872483%",
            "position": "absolute",
          }
        }
      >
        28
      </span>
      <span
        className="sc-kpOJdX bhoRTc"
        style={
          Object {
            "left": "19.463087248322147%",
            "position": "absolute",
          }
        }
      >
        29
      </span>
      <span
        className="sc-kpOJdX WjFPJ"
        style={
          Object {
            "left": "20.13422818791946%",
            "position": "absolute",
          }
        }
      >
        30
      </span>
      <span
        className="sc-kpOJdX dMslrd"
        style={
          Object {
            "left": "20.80536912751678%",
            "position": "absolute",
          }
        }
      >
        31
      </span>
      <span
        className="sc-kpOJdX jJPKiI"
        style={
          Object {
            "left": "21.476510067114095%",
            "position": "absolute",
          }
        }
      >
        32
      </span>
      <span
        className="sc-kpOJdX bhoRTc"
        style={
          Object {
            "left": "22.14765100671141%",
            "position": "absolute",
          }
        }
      >
        33
      </span>
      <span
        className="sc-kpOJdX jCdJlt"
        style={
          Object {
            "left": "22.818791946308725%",
            "position": "absolute",
          }
        }
      >
        34
      </span>
      <span
        className="sc-kpOJdX jJPKiI"
        style={
          Object {
            "left": "23.48993288590604%",
            "position": "absolute",
          }
        }
      >
        35
      </span>
      <span
        className="sc-kpOJdX WjFPJ"
        style={
          Object {
            "left": "24.161073825503358%",
            "position": "absolute",
          }
        }
      >
        36
      </span>
      <span
        className="sc-kpOJdX bhoRTc"
        style={
          Object {
            "left": "24.832214765100673%",
            "position": "absolute",
          }
        }
      >
        37
      </span>
      <span
        className="sc-kpOJdX WjFPJ"
        style={
          Object {
            "left": "25.503355704697988%",
            "position": "absolute",
          }
        }
      >
        38
      </span>
      <span
        className="sc-kpOJdX dNvJeO"
        style={
          Object {
            "left": "26.174496644295303%",
            "position": "absolute",
          }
        }
      >
        39
      </span>
      <span
        className="sc-kpOJdX WjFPJ"
        style={
          Object {
            "left": "26.845637583892618%",
            "position": "absolute",
          }
        }
      >
        40
      </span>
      <span
        className="sc-kpOJdX dNvJeO"
        style={
          Object {
            "left": "27.516778523489933%",
            "position": "absolute",
          }
        }
      >
        41
      </span>
      <span
        className="sc-kpOJdX iAAhdL"
        style={
          Object {
            "left": "28.187919463087248%",
            "position": "absolute",
          }
        }
      >
        42
      </span>
      <span
        className="sc-kpOJdX WjFPJ"
        style={
          Object {
            "left": "28.859060402684566%",
            "position": "absolute",
          }
        }
      >
        43
      </span>
      <span
        className="sc-kpOJdX dMslrd"
        style={
          Object {
            "left": "29.53020134228188%",
            "position": "absolute",
          }
        }
      >
        44
      </span>
      <span
        className="sc-kpOJdX deFbCU"
        style={
          Object {
            "left": "30.201342281879196%",
            "position": "absolute",
          }
        }
      >
        45
      </span>
      <span
        className="sc-kpOJdX jJPKiI"
        style={
          Object {
            "left": "30.87248322147651%",
            "position": "absolute",
          }
        }
      >
        46
      </span>
      <span
        className="sc-kpOJdX dNvJeO"
        style={
          Object {
            "left": "31.543624161073826%",
            "position": "absolute",
          }
        }
      >
        47
      </span>
      <span
        className="sc-kpOJdX WjFPJ"
        style={
          Object {
            "left": "32.21476510067114%",
            "position": "absolute",
          }
        }
      >
        48
      </span>
      <span
        className="sc-kpOJdX dMslrd"
        style={
          Object {
            "left": "32.88590604026846%",
            "position": "absolute",
          }
        }
      >
        49
      </span>
      <span
        className="sc-kpOJdX dKubCR"
        style={
          Object {
            "left": "33.557046979865774%",
            "position": "absolute",
          }
        }
      >
        50
      </span>
      <span
        className="sc-kpOJdX dKubCR"
        style={
          Object {
            "left": "34.22818791946309%",
            "position": "absolute",
          }
        }
      >
        51
      </span>
      <span
        className="sc-kpOJdX jCdJlt"
        style={
          Object {
            "left": "34.899328859060404%",
            "position": "absolute",
          }
        }
      >
        52
      </span>
      <span
        className="sc-kpOJdX bhoRTc"
        style={
          Object {
            "left": "35.57046979865772%",
            "position": "absolute",
          }
        }
      >
        53
      </span>
      <span
        className="sc-kpOJdX deFbCU"
        style={
          Object {
            "left": "36.241610738255034%",
            "position": "absolute",
          }
        }
      >
        54
      </span>
      <span
        className="sc-kpOJdX iAAhdL"
        style={
          Object {
            "left": "36.91275167785235%",
            "position": "absolute",
          }
        }
      >
        55
      </span>
      <span
        className="sc-kpOJdX WjFPJ"
        style={
          Object {
            "left": "37.58389261744966%",
            "position": "absolute",
          }
        }
      >
        56
      </span>
      <span
        className="sc-kpOJdX jJPKiI"
        style={
          Object {
            "left": "38.25503355704698%",
            "position": "absolute",
          }
        }
      >
        57
      </span>
      <span
        className="sc-kpOJdX iAAhdL"
        style={
          Object {
            "left": "38.92617449664429%",
            "position": "absolute",
          }
        }
      >
        58
      </span>
      <span
        className="sc-kpOJdX deFbCU"
        style={
          Object {
            "left": "39.59731543624161%",
            "position": "absolute",
          }
        }
      >
        59
      </span>
      <span
        className="sc-kpOJdX WjFPJ"
        style={
          Object {
            "left": "40.26845637583892%",
            "position": "absolute",
          }
        }
      >
        60
      </span>
      <span
        className="sc-kpOJdX fcbFIW"
        style={
          Object {
            "left": "40.939597315436245%",
            "position": "absolute",
          }
        }
      >
        61
      </span>
      <span
        className="sc-kpOJdX fcbFIW"
        style={
          Object {
            "left": "41.61073825503356%",
            "position": "absolute",
          }
        }
      >
        62
      </span>
      <span
        className="sc-kpOJdX deFbCU"
        style={
          Object {
            "left": "42.281879194630875%",
            "position": "absolute",
          }
        }
      >
        63
      </span>
      <span
        className="sc-kpOJdX jJPKiI"
        style={
          Object {
            "left": "42.95302013422819%",
            "position": "absolute",
          }
        }
      >
        64
      </span>
      <span
        className="sc-kpOJdX dMslrd"
        style={
          Object {
            "left": "43.624161073825505%",
            "position": "absolute",
          }
        }
      >
        65
      </span>
      <span
        className="sc-kpOJdX deFbCU"
        style={
          Object {
            "left": "44.29530201342282%",
            "position": "absolute",
          }
        }
      >
        66
      </span>
      <span
        className="sc-kpOJdX dNvJeO"
        style={
          Object {
            "left": "44.966442953020135%",
            "position": "absolute",
          }
        }
      >
        67
      </span>
      <span
        className="sc-kpOJdX fcbFIW"
        style={
          Object {
            "left": "45.63758389261745%",
            "position": "absolute",
          }
        }
      >
        68
      </span>
      <span
        className="sc-kpOJdX dKubCR"
        style={
          Object {
            "left": "46.308724832214764%",
            "position": "absolute",
          }
        }
      >
        69
      </span>
      <span
        className="sc-kpOJdX iAAhdL"
        style={
          Object {
            "left": "46.97986577181208%",
            "position": "absolute",
          }
        }
      >
        70
      </span>
      <span
        className="sc-kpOJdX fcbFIW"
        style={
          Object {
            "left": "47.651006711409394%",
            "position": "absolute",
          }
        }
      >
        71
      </span>
      <span
        className="sc-kpOJdX dMslrd"
        style={
          Object {
            "left": "48.322147651006716%",
            "position": "absolute",
          }
        }
      >
        72
      </span>
      <span
        className="sc-kpOJdX dKubCR"
        style={
          Object {
            "left": "48.99328859060403%",
            "position": "absolute",
          }
        }
      >
        73
      </span>
      <span
        className="sc-kpOJdX dNvJeO"
        style={
          Object {
            "left": "49.664429530201346%",
            "position": "absolute",
          }
        }
      >
        74
      </span>
      <span
        className="sc-kpOJdX fcbFIW"
        style={
          Object {
            "left": "50.33557046979866%",
            "position": "absolute",
          }
        }
      >
        75
      </span>
      <span
        className="sc-kpOJdX iAAhdL"
        style={
          Object {
            "left": "51.006711409395976%",
            "position": "absolute",
          }
        }
      >
        76
      </span>
      <span
        className="sc-kpOJdX dNvJeO"
        style={
          Object {
            "left": "51.67785234899329%",
            "position": "absolute",
          }
        }
      >
        77
      </span>
      <span
        className="sc-kpOJdX dKubCR"
        style={
          Object {
            "left": "52.348993288590606%",
            "position": "absolute",
          }
        }
      >
        78
      </span>
      <span
        className="sc-kpOJdX dKubCR"
        style={
          Object {
            "left": "53.02013422818792%",
            "position": "absolute",
          }
        }
      >
        79
      </span>
      <span
        className="sc-kpOJdX iAAhdL"
        style={
          Object {
            "left": "53.691275167785236%",
            "position": "absolute",
          }
        }
      >
        80
      </span>
      <span
        className="sc-kpOJdX fcbFIW"
        style={
          Object {
            "left": "54.36241610738255%",
            "position": "absolute",
          }
        }
      >
        81
      </span>
      <span
        className="sc-kpOJdX bhoRTc"
        style={
          Object {
            "left": "55.033557046979865%",
            "position": "absolute",
          }
        }
      >
        82
      </span>
      <span
        className="sc-kpOJdX deFbCU"
        style={
          Object {
            "left": "55.70469798657718%",
            "position": "absolute",
          }
        }
      >
        83
      </span>
      <span
        className="sc-kpOJdX iAAhdL"
        style={
          Object {
            "left": "56.375838926174495%",
            "position": "absolute",
          }
        }
      >
        84
      </span>
      <span
        className="sc-kpOJdX WjFPJ"
        style={
          Object {
            "left": "57.04697986577181%",
            "position": "absolute",
          }
        }
      >
        85
      </span>
      <span
        className="sc-kpOJdX dMslrd"
        style={
          Object {
            "left": "57.71812080536913%",
            "position": "absolute",
          }
        }
      >
        86
      </span>
      <span
        className="sc-kpOJdX dMslrd"
        style={
          Object {
            "left": "58.38926174496645%",
            "position": "absolute",
          }
        }
      >
        87
      </span>
      <span
        className="sc-kpOJdX dNvJeO"
        style={
          Object {
            "left": "59.06040268456376%",
            "position": "absolute",
          }
        }
      >
        88
      </span>
      <span
        className="sc-kpOJdX jCdJlt"
        style={
          Object {
            "left": "59.73154362416108%",
            "position": "absolute",
          }
        }
      >
        89
      </span>
      <span
        className="sc-kpOJdX dKubCR"
        style={
          Object {
            "left": "60.40268456375839%",
            "position": "absolute",
          }
        }
      >
        90
      </span>
      <span
        className="sc-kpOJdX dMslrd"
        style={
          Object {
            "left": "61.07382550335571%",
            "position": "absolute",
          }
        }
      >
        91
      </span>
      <span
        className="sc-kpOJdX dKubCR"
        style={
          Object {
            "left": "61.74496644295302%",
            "position": "absolute",
          }
        }
      >
        92
      </span>
      <span
        className="sc-kpOJdX deFbCU"
        style={
          Object {
            "left": "62.41610738255034%",
            "position": "absolute",
          }
        }
      >
        93
      </span>
      <span
        className="sc-kpOJdX WjFPJ"
        style={
          Object {
            "left": "63.08724832214765%",
            "position": "absolute",
          }
        }
      >
        94
      </span>
      <span
        className="sc-kpOJdX bhoRTc"
        style={
          Object {
            "left": "63.758389261744966%",
            "position": "absolute",
          }
        }
      >
        95
      </span>
      <span
        className="sc-kpOJdX bhoRTc"
        style={
          Object {
            "left": "64.42953020134227%",
            "position": "absolute",
          }
        }
      >
        96
      </span>
      <span
        className="sc-kpOJdX deFbCU"
        style={
          Object {
            "left": "65.1006711409396%",
            "position": "absolute",
          }
        }
      >
        97
      </span>
      <span
        className="sc-kpOJdX dKubCR"
        style={
          Object {
            "left": "65.77181208053692%",
            "position": "absolute",
          }
        }
      >
        98
      </span>
      <span
        className="sc-kpOJdX dMslrd"
        style={
          Object {
            "left": "66.44295302013423%",
            "position": "absolute",
          }
        }
      >
        99
      </span>
      <span
        className="sc-kpOJdX bhoRTc"
        style={
          Object {
            "left": "67.11409395973155%",
            "position": "absolute",
          }
        }
      >
        100
      </span>
      <span
        className="sc-kpOJdX deFbCU"
        style={
          Object {
            "left": "67.78523489932886%",
            "position": "absolute",
          }
        }
      >
        101
      </span>
      <span
        className="sc-kpOJdX dMslrd"
        style={
          Object {
            "left": "68.45637583892618%",
            "position": "absolute",
          }
        }
      >
        102
      </span>
      <span
        className="sc-kpOJdX dKubCR"
        style={
          Object {
            "left": "69.12751677852349%",
            "position": "absolute",
          }
        }
      >
        103
      </span>
      <span
        className="sc-kpOJdX fcbFIW"
        style={
          Object {
            "left": "69.79865771812081%",
            "position": "absolute",
          }
        }
      >
        104
      </span>
      <span
        className="sc-kpOJdX fcbFIW"
        style={
          Object {
            "left": "70.46979865771812%",
            "position": "absolute",
          }
        }
      >
        105
      </span>
      <span
        className="sc-kpOJdX deFbCU"
        style={
          Object {
            "left": "71.14093959731544%",
            "position": "absolute",
          }
        }
      >
        106
      </span>
      <span
        className="sc-kpOJdX iAAhdL"
        style={
          Object {
            "left": "71.81208053691275%",
            "position": "absolute",
          }
        }
      >
        107
      </span>
      <span
        className="sc-kpOJdX dMslrd"
        style={
          Object {
            "left": "72.48322147651007%",
            "position": "absolute",
          }
        }
      >
        108
      </span>
      <span
        className="sc-kpOJdX dMslrd"
        style={
          Object {
            "left": "73.15436241610739%",
            "position": "absolute",
          }
        }
      >
        109
      </span>
      <span
        className="sc-kpOJdX deFbCU"
        style={
          Object {
            "left": "73.8255033557047%",
            "position": "absolute",
          }
        }
      >
        110
      </span>
      <span
        className="sc-kpOJdX dNvJeO"
        style={
          Object {
            "left": "74.49664429530202%",
            "position": "absolute",
          }
        }
      >
        111
      </span>
      <span
        className="sc-kpOJdX dNvJeO"
        style={
          Object {
            "left": "75.16778523489933%",
            "position": "absolute",
          }
        }
      >
        112
      </span>
      <span
        className="sc-kpOJdX iAAhdL"
        style={
          Object {
            "left": "75.83892617449665%",
            "position": "absolute",
          }
        }
      >
        113
      </span>
      <span
        className="sc-kpOJdX dMslrd"
        style={
          Object {
            "left": "76.51006711409396%",
            "position": "absolute",
          }
        }
      >
        114
      </span>
      <span
        className="sc-kpOJdX bhoRTc"
        style={
          Object {
            "left": "77.18120805369128%",
            "position": "absolute",
          }
        }
      >
        115
      </span>
      <span
        className="sc-kpOJdX dNvJeO"
        style={
          Object {
            "left": "77.85234899328859%",
            "position": "absolute",
          }
        }
      >
        116
      </span>
      <span
        className="sc-kpOJdX dKubCR"
        style={
          Object {
            "left": "78.52348993288591%",
            "position": "absolute",
          }
        }
      >
        117
      </span>
      <span
        className="sc-kpOJdX fcbFIW"
        style={
          Object {
            "left": "79.19463087248322%",
            "position": "absolute",
          }
        }
      >
        118
      </span>
      <span
        className="sc-kpOJdX dMslrd"
        style={
          Object {
            "left": "79.86577181208054%",
            "position": "absolute",
          }
        }
      >
        119
      </span>
      <span
        className="sc-kpOJdX fcbFIW"
        style={
          Object {
            "left": "80.53691275167785%",
            "position": "absolute",
          }
        }
      >
        120
      </span>
      <span
        className="sc-kpOJdX deFbCU"
        style={
          Object {
            "left": "81.20805369127517%",
            "position": "absolute",
          }
        }
      >
        121
      </span>
      <span
        className="sc-kpOJdX WjFPJ"
        style={
          Object {
            "left": "81.87919463087249%",
            "position": "absolute",
          }
        }
      >
        122
      </span>
      <span
        className="sc-kpOJdX deFbCU"
        style={
          Object {
            "left": "82.5503355704698%",
            "position": "absolute",
          }
        }
      >
        123
      </span>
      <span
        className="sc-kpOJdX iAAhdL"
        style={
          Object {
            "left": "83.22147651006712%",
            "position": "absolute",
          }
        }
      >
        124
      </span>
      <span
        className="sc-kpOJdX jCdJlt"
        style={
          Object {
            "left": "83.89261744966443%",
            "position": "absolute",
          }
        }
      >
        125
      </span>
      <span
        className="sc-kpOJdX bhoRTc"
        style={
          Object {
            "left": "84.56375838926175%",
            "position": "absolute",
          }
        }
      >
        126
      </span>
      <span
        className="sc-kpOJdX fcbFIW"
        style={
          Object {
            "left": "85.23489932885906%",
            "position": "absolute",
          }
        }
      >
        127
      </span>
      <span
        className="sc-kpOJdX jJPKiI"
        style={
          Object {
            "left": "85.90604026845638%",
            "position": "absolute",
          }
        }
      >
        128
      </span>
      <span
        className="sc-kpOJdX jCdJlt"
        style={
          Object {
            "left": "86.57718120805369%",
            "position": "absolute",
          }
        }
      >
        129
      </span>
      <span
        className="sc-kpOJdX dNvJeO"
        style={
          Object {
            "left": "87.24832214765101%",
            "position": "absolute",
          }
        }
      >
        130
      </span>
      <span
        className="sc-kpOJdX WjFPJ"
        style={
          Object {
            "left": "87.91946308724832%",
            "position": "absolute",
          }
        }
      >
        131
      </span>
      <span
        className="sc-kpOJdX iAAhdL"
        style={
          Object {
            "left": "88.59060402684564%",
            "position": "absolute",
          }
        }
      >
        132
      </span>
      <span
        className="sc-kpOJdX jCdJlt"
        style={
          Object {
            "left": "89.26174496644296%",
            "position": "absolute",
          }
        }
      >
        133
      </span>
      <span
        className="sc-kpOJdX dKubCR"
        style={
          Object {
            "left": "89.93288590604027%",
            "position": "absolute",
          }
        }
      >
        134
      </span>
      <span
        className="sc-kpOJdX jCdJlt"
        style={
          Object {
            "left": "90.60402684563759%",
            "position": "absolute",
          }
        }
      >
        135
      </span>
      <span
        className="sc-kpOJdX jJPKiI"
        style={
          Object {
            "left": "91.2751677852349%",
            "position": "absolute",
          }
        }
      >
        136
      </span>
      <span
        className="sc-kpOJdX WjFPJ"
        style={
          Object {
            "left": "91.94630872483222%",
            "position": "absolute",
          }
        }
      >
        137
      </span>
      <span
        className="sc-kpOJdX dKubCR"
        style={
          Object {
            "left": "92.61744966442953%",
            "position": "absolute",
          }
        }
      >
        138
      </span>
      <span
        className="sc-kpOJdX dNvJeO"
        style={
          Object {
            "left": "93.28859060402685%",
            "position": "absolute",
          }
        }
      >
        139
      </span>
      <span
        className="sc-kpOJdX jJPKiI"
        style={
          Object {
            "left": "93.95973154362416%",
            "position": "absolute",
          }
        }
      >
        140
      </span>
      <span
        className="sc-kpOJdX deFbCU"
        style={
          Object {
            "left": "94.63087248322147%",
            "position": "absolute",
          }
        }
      >
        141
      </span>
      <span
        className="sc-kpOJdX dNvJeO"
        style={
          Object {
            "left": "95.30201342281879%",
            "position": "absolute",
          }
        }
      >
        142
      </span>
      <span
        className="sc-kpOJdX jJPKiI"
        style={
          Object {
            "left": "95.9731543624161%",
            "position": "absolute",
          }
        }
      >
        143
      </span>
      <span
        className="sc-kpOJdX dNvJeO"
        style={
          Object {
            "left": "96.64429530201343%",
            "position": "absolute",
          }
        }
      >
        144
      </span>
      <span
        className="sc-kpOJdX fcbFIW"
        style={
          Object {
            "left": "97.31543624161074%",
            "position": "absolute",
          }
        }
      >
        145
      </span>
      <span
        className="sc-kpOJdX bhoRTc"
        style={
          Object {
            "left": "97.98657718120806%",
            "position": "absolute",
          }
        }
      >
        146
      </span>
      <span
        className="sc-kpOJdX dKubCR"
        style={
          Object {
            "left": "98.65771812080537%",
            "position": "absolute",
          }
        }
      >
        147
      </span>
      <span
        className="sc-kpOJdX WjFPJ"
        style={
          Object {
            "left": "99.32885906040269%",
            "position": "absolute",
          }
        }
      >
        148
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip bottom tooltip 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "center",
        "minHeight": "100vh",
      }
    }
  >
    <div
      className="sc-dxgOiQ fLAzQI"
      onMouseDown={undefined}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "zIndex": undefined,
        }
      }
    >
      <span
        className="sc-eNQAEJ bYcXLD"
        color="red"
        onClick={undefined}
      >
        <span
          className="sc-jKJlTe kCplyc"
        >
          foobar
        </span>
        <span
          className="sc-ckVGcZ clgMAH"
        >
          ?
        </span>
      </span>
      <span>
        Tooltip bottom text
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip green tooltip 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "center",
        "minHeight": "100vh",
      }
    }
  >
    <div
      className="sc-dxgOiQ fLAzQI"
      onMouseDown={undefined}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "zIndex": undefined,
        }
      }
    >
      <span
        className="sc-eNQAEJ gpBpl"
        color="green"
        onClick={undefined}
      >
        <span
          className="sc-jKJlTe kxCGof"
        />
      </span>
      <span>
        Tooltip text
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip left tooltip 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "center",
        "minHeight": "100vh",
      }
    }
  >
    <div
      className="sc-dxgOiQ fLAzQI"
      onMouseDown={undefined}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "zIndex": undefined,
        }
      }
    >
      <span
        className="sc-eNQAEJ cNPDIk"
        color={undefined}
        onClick={undefined}
      >
        <span
          className="sc-jKJlTe kxCGof"
        />
      </span>
      <span>
        Tooltip text
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip red tooltip 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "center",
        "minHeight": "100vh",
      }
    }
  >
    <div
      className="sc-dxgOiQ fLAzQI"
      onMouseDown={undefined}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "zIndex": undefined,
        }
      }
    >
      <span
        className="sc-eNQAEJ jJMARe"
        color="red"
        onClick={undefined}
      >
        <span
          className="sc-jKJlTe kxCGof"
        />
      </span>
      <span>
        Tooltip text
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip right tooltip 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "center",
        "minHeight": "100vh",
      }
    }
  >
    <div
      className="sc-dxgOiQ fLAzQI"
      onMouseDown={undefined}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "zIndex": undefined,
        }
      }
    >
      <span
        className="sc-eNQAEJ AYzVp"
        color={undefined}
        onClick={undefined}
      >
        <span
          className="sc-jKJlTe kxCGof"
        />
      </span>
      <span>
        Tooltip text
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip tooltip with left icon 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "center",
        "minHeight": "100vh",
      }
    }
  >
    <div
      className="sc-dxgOiQ fLAzQI"
      onMouseDown={undefined}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "zIndex": undefined,
        }
      }
    >
      <span
        className="sc-eNQAEJ iosfMy"
        color={undefined}
        onClick={undefined}
      >
        <span
          className="sc-ckVGcZ clgMAH"
        >
          ?
        </span>
        <span
          className="sc-jKJlTe kJAArO"
        />
      </span>
      <span>
        Tooltip text
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip tooltip with right icon 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "center",
        "minHeight": "100vh",
      }
    }
  >
    <div
      className="sc-dxgOiQ fLAzQI"
      onMouseDown={undefined}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "zIndex": undefined,
        }
      }
    >
      <span
        className="sc-eNQAEJ jBnWry"
        color={undefined}
        onClick={undefined}
      >
        <span
          className="sc-jKJlTe kCplyc"
        />
        <span
          className="sc-ckVGcZ clgMAH"
        >
          ?
        </span>
      </span>
      <span>
        Tooltip text
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip top tooltip 1`] = `
<div
  className="sc-bdVaJa jBbfIF"
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "center",
        "minHeight": "100vh",
      }
    }
  >
    <div
      className="sc-dxgOiQ fLAzQI"
      onMouseDown={undefined}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "zIndex": undefined,
        }
      }
    >
      <span
        className="sc-eNQAEJ dUIGOF"
        color="black"
        onClick={undefined}
      >
        <span
          className="sc-jKJlTe kxCGof"
        >
          foobar
        </span>
      </span>
      <span>
        Tooltip top text
      </span>
    </div>
  </div>
</div>
`;
